# Aegis-Cockpit

./: .gitignore  README.md
.github/workflows/: build.yml
assets/: MermaidGraph.mmd
scripts/: installer-v2.sh  installer.sh  verify.sh
src/: CMakeLists.txt  Main.qml  main.cpp
src/core/: VehicleState.cpp  VehicleState.hpp
src/hmi/include/: ModeType.hpp
src/hmi/src/: ModeType.cpp
src/qml/: SpeedText.qml
src/ui/: FpsCounter.cpp  FpsCounter.hpp
